--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PN'
 - !lcsh 'Children -- Anecdotes, facetiae, satire, etc.'
+- GITenberg
 title: Great Mysteries and Little Plagues
 url: http://www.gutenberg.org/ebooks/34865
